# locale_test

./: Dockerfile.frozen  Dockerfile.frozen_alpine  Dockerfile.frozen_static  Dockerfile.frozen_static_alpine  Dockerfile.frozen_static_alpine_on_ubuntu  Dockerfile.frozen_static_debian_on_alpine  Dockerfile.python_src  Dockerfile.python_src_alpine  README.md  pyproject.toml
scripts/: all.sh  build.sh  check.sh
src/: check.py
