[build-system]
requires = [
    "setuptools==69.0.2",
    "wheel==0.42.0",
]
build-backend = "setuptools.build_meta"

[project]
version="0.0.1"
name = "locale_test"
description = "Checks how locale is handled by python+docker alpine+pyinstaller"
readme = "README_PYPI.md"
requires-python = ">=3.8,<3.13"
license = {file="LICENSE.md"}
dependencies = [
]

[project.scripts]
check = "check:main"

[project.optional-dependencies]
dev = [
    "pyinstaller==6.9.0",
]
devlinux = [
    "auditwheel==5.4.0",
    #"staticx==0.14.1",
    "scons==4.6.0"
]
test = [
    "pytest==7.4.3",
]

[tool.pytest.ini_options]
log_format = "%(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 300
testpaths = [
    "tests",
    "src" # needed for doctests    
]
pythonpath = [
    "src"
]
addopts = "--doctest-modules"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # long lines
    "E501",
]

